--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,6 +12,5 @@ jobs:
       - uses: actions/checkout@v3
         with:
           node-version: '20'
-      - run: npm ci
-      - run: npm test
+      - run: npm install
       - run: npm run build
