--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,4 +18,4 @@ jobs:
           mkdir -p `/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > /.ssh/id_rsa
           chmod 600 /.ssh/id_rsa
-      - run:  rsync -avz --delete build/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_PATH }}
+      - run:  rsync -avz --delete build/  -e "ssh -i "${{ secrets.SSH_PRIVATE_KEY }}"" "${{ secrets.REMOTE_USER }}"@"${{ secrets.REMOTE_HOST }}":"${{ secrets.REMOTE_PATH }}"
