--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,7 +15,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: | 
-          mkdir -p `/.ssh
+          mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > /.ssh/id_rsa
           chmod 600 /.ssh/id_rsa
       - run:  rsync -avz --delete build/  -e "ssh -i "${{ secrets.SSH_PRIVATE_KEY }}"" "${{ secrets.REMOTE_USER }}"@"${{ secrets.REMOTE_HOST }}":"${{ secrets.REMOTE_PATH }}"
