Install rsync in GitHub Actions workflow for secure file transfer

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,4 +16,5 @@ jobs:
       - run: npm run build
       - run: mkdir -p ~/.ssh
       - run: echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519 && chmod 600 ~/.ssh/id_ed25519
+      - run: apt install rsync -y 
       - run: rsync -avz --delete build/  -e "ssh -i ~/.ssh/id_ed25519" "${{ secrets.REMOTE_USER }}"@"${{ secrets.REMOTE_HOST }}":"${{ secrets.REMOTE_PATH }}"
