--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,9 +12,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           node-version: '20'
-      - run: npm install
-      - run: npm run build
-      - run: apt-get update && apt-get install -y rsync
+      # - run: npm install
+      # - run: npm run build
+      # - run: apt-get update && apt-get install -y rsync
       - run: mkdir -p ~/.ssh
       - run: echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519 && chmod 600 ~/.ssh/id_ed25519
-      - run: rsync -avz --delete build/ -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519" root@139.59.18.174:/usr/local/src/
+      - run: ls -lrt ~/.ssh/id_ed25519
+      - run: echo "rsync -avz --delete build/ -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519" root@139.59.18.174:/usr/local/src/"
