--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,4 +17,4 @@ jobs:
       - run: apt-get update && apt-get install -y rsync
       - run: mkdir -p ~/.ssh
       - run: echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519 && chmod 600 ~/.ssh/id_ed25519
-      - run: rsync -avz --delete build/ -e ssh -o StrictHostKeyChecking=no -i  /github/home/.ssh/id_ed25519 root@139.59.18.174:/usr/local/src/
+      - run: rsync -avz --delete build/ -e "ssh -o StrictHostKeyChecking=no -i  /github/home/.ssh/id_ed25519" root@139.59.18.174:/usr/local/src/
