--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "algoliasearch": "^5.23.3",
     "clsx": "^2.0.0",
     "docusaurus-plugin-image-zoom": "^3.0.1",
+    "docusaurus-pushfeedback": "^1.0.3",
     "prism-react-renderer": "^2.3.0",
+    "pushfeedback-react": "^0.1.63",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
